hphp/hack/test/typecheck/tconst_localize_where_clauses.php.exp
ERROR: File "tconst_localize_where_clauses.php", line 10, characters 16-19:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
ERROR: File "tconst_localize_where_clauses.php", line 22, characters 16-19:
Type access is only valid for a class, `self`, or `this`. To relate type parameters and type constants, you likely want to use the 'with refinement' feature instead. (Naming[2129])
